<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/cost_of_service"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtQuestionRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCost" />

    <RadioGroup
        android:id="@+id/rgRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radAmazing"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestionRating">

        <RadioButton
            android:id="@+id/radAmazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_amazing" />

        <RadioButton
            android:id="@+id/radGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_good" />

        <RadioButton
            android:id="@+id/radOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_ok" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swRoundUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/round_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgRating" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swRoundUp" />

    <TextView
        android:id="@+id/txtTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalculate" />
</androidx.constraintlayout.widget.ConstraintLayout>